<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="button_false">False</string>
    <string name="button_true">True</string>
    <string name="toast_correct">Correct</string>
    <string name="toast_incorrect">InCorrect</string>
    <string name="toast_cheat">Cheating is Wrong!!!!</string>

    <string name="question_australia">استرالیا بزرگ ترین قاره جهان است.</string>
    <string name="question_oceans">اقیانوس آرام بزرگ ترین اقیانوس جهان است.</string>
    <string name="question_mideast">همه کشورهای خاورمیانه عرب زبان هستند.</string>
    <string name="question_africa">مصر در قاره آفریقا قرار دارد.</string>
    <string name="question_americas">کشور آمریکا پرجمعیت ترین کشور دنیا است.</string>
    <string name="question_asia">قاره آسیا در نیم کره جنوبی جهان واقع شده است.</string>
    <string name="button_next">Next</string>
    <string name="button_prev">Prev</string>
    <string name="warning_text">Are you sure you wnat to cheat?</string>
    <string name="button_show_answer">Show Answer</string>
    <string name="button_cheat">Cheat!!</string>
</resources>
