<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="QuizViewModel"
            type="com.example.geoquizmmvm.viewmodel.QuizViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            tools:text="@string/question_americas" />

        <Button
            android:id="@+id/button_cheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cheat" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_true" />

            <Button
                android:id="@+id/button_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_arrow_left"
                android:text="@string/button_prev" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_arrow_right"
                android:text="@string/button_next" />
        </LinearLayout>


    </LinearLayout>
</layout>